--- a/index.html
+++ b/index.html
@@ -3,65 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devi Mandir Kirtan 2024</title>
+    <title>Cheen Tapak Dam Dam </title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
 </head>
-<body>
+
+
     
-    <button id="dark-mode-toggle" class="dark-mode-toggle" onclick="toggleDarkMode()">
-        <i class="fas fa-sun"></i> </button>
-   
-
-    <h1 class="animated-heading">देवी मंदिर कीर्तन 2024</h1>
-
-    <img src="https://5.imimg.com/data5/QV/LV/GLADMIN-6975709/god-hindu-devi-mata-photo-frame.png" alt="Image">
-
-
-    <big><p><b>नमस्कार</b></p></big>
-    <p>हम कौसानी वासी देवी मंदिर की तरफ़ से आपका हार्दिक स्वागत करते हैं। माता रानी की असीम कृपा और आशीर्वाद से हम इस वर्ष पुनः 11 फरवरी को कौसानी देवी मंदिर में कीर्तन आयोजित करने जा रहे हैं। आप सभी से निवेदन है कि कीर्तन में शामिल हों। यह कीर्तन आनंद, शांति और समृद्धि का एक महत्वपूर्ण अवसर है, जहां हम सब मिलकर भगवान की महिमा गाते हैं।</p>
-    <p><strong><big>कीर्तन की महत्वपूर्ण जानकारी</big></strong></p>
-    <ul>
-        <li>&rtrif; <b>तारीख:</b> 11 फरवरी</li>
-        <li>&rtrif; <b>समय:</b> प्रातः 10:00 बजे से  शाम 5:00 बजे तक</li>
-        <li>&rtrif; <b>स्थान:</b> कौसानी देवी मंदिर</li>
-        <li>&rtrif;<b> संयोजक:</b> कौसानी देवी मंदिर आयोजन समिति</li>
-    </ul>
-    <p><strong><big>कीर्तन में शामिल होने की विधि</big></strong></p>
-    <ul>
-        <li>&rtrif; पवित्र वातावरण में ध्यान लगाकर बैठें।</li>
-        <li>&rtrif; कीर्तन के समय अपने विचारों को पवित्रता और प्रेम से भगवान &nbsp;&nbsp;&nbsp;की ओर लगाएं।</li>
-        <li>&rtrif; मोबाइल फोन और अन्य व्यक्तिगत विचारों से दूर रहें और पवित्र &nbsp;&nbsp;&nbsp; वातावरण बनाएं रखें।</li>
-    </ul>
-    <p> <b class="black">सामग्री प्रदान:</b> हम यहां आपके लिए समस्त सामग्री प्रदान करेंगे, जैसे कि प्रसाद, जल, और आसन। परंतु, अगर आप कोई विशेष सामग्री या सेवा देना चाहते हैं, तो कृपया हमें पहले सूचित करें|</p>
-    <p><b>धन्यवाद!</b>
-हम आशा करते हैं कि आप इस पवित्र अवसर का आनंद उठाएंगे और भगवान की कृपा से समृद्धि और शांति प्राप्त करेंगे।
-</p>
-
-<div class="button-container" style="margin-bottom: 20px; margin-top: 20px;">
-    <!-- Button with cool animation -->
-    <button class="cool-button" id="coolbutt" onclick="toggleMap()">Show Map <br> (नक्शा दिखाएँ)</button>
-  </div>
-  <div id="mapContainer" style="display: none; width: 100%;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13913.064777701673!2d79.50942146662597!3d29.333193527948172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a098e55dd53c67%3A0x5783b8d43ffef849!2sDevi%20Temple!5e0!3m2!1sen!2sin!4v1706520367618!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="eager" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-
-    <div class="image-container">
-        <img src="https://lh5.googleusercontent.com/p/AF1QipNxQ_BrjjrQ9OBLSfKolQnGsZkpDBgfnqatUZA2=w408-h680-k-no">
-        <img src="https://lh5.googleusercontent.com/p/AF1QipOpEPuAFXKpDZW7iEd6SZQaEmmFk797Ndft_vKj=s1792-k-no">
-        <img src="https://lh5.googleusercontent.com/p/AF1QipO_0p-N3b1Jw6YHi57Sx7DieKSIfNprJqusQbWB=s2162-k-no" style="width: 100%; max-width: 100%;">
-    </div>
-  
-    <!-- Map container -->
-   
-    <!-- Footer with contact details -->
-    <footer>
-        <div class="contact-details">
-            <p><strong>Contact:</strong> 9105808002</p>
-            <p><strong>Email:</strong> hv53785@gmail.com</p>
-        </div>
-    </footer>
+    
 
     <script>
         function toggleMap() {
