--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheen Tapak Dam Dam </title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title style=  {
+    color: #FF8C00;
+    text-align: center;
+    font-size: 3em;
+    animation: pulse 2s infinite; 
+} >Cheen Tapak Dam Dam </title>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
 </head>
